[package]
name = "cidr_routing-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.4"
mimalloc = { version = "*", features = ["default"] }

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "routing_table_bench"
harness = false
